--- a/src/components/Login/LoginButton/Button.module.css
+++ b/src/components/Login/LoginButton/Button.module.css
@@ -1,4 +1,8 @@
 .loginbtn button{
     background-color: #d9d9d9;
     color: black;
+    font-size: 1rem;
+    border: none;
+    border-radius: .4rem;
+    padding: .3rem 2.5rem;
 }
