--- a/src/components/Funcionarios/Put.module.css
+++ b/src/components/Funcionarios/Put.module.css
@@ -1,4 +1,4 @@
-.putForm h1 {
+.putFunc h1 {
     background-color: #0a2b2b;
     color: #FFFF;
     font-size: 60px;
@@ -8,29 +8,29 @@
     height: 110px;
 }
 
-.putForm p {
+.putFunc p {
     text-align: center;
     margin-top: 75px;
     margin-bottom: 50px;
     font-size: 2rem;
 }
 
-.putForm form {
+.putFunc form {
     width: 500px;
-    height: 550px;
+    height: 750px;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
     /* display: grid; */
 }
 
-.putForm label {
+.putFunc label {
     display: grid;
     font-size: 24px;
     margin-top: 20px;
 }
 
-.putForm input,
+.putFunc input,
 select {
 
     width: 458px;
@@ -39,7 +39,7 @@ select {
     border: none;
 }
 
-.putForm button {
+.putFunc button {
     background-color: #d9d9d9;
     color: rgb(29, 29, 29);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
