--- a/src/components/Funcionarios/Get.module.css
+++ b/src/components/Funcionarios/Get.module.css
@@ -1,4 +1,4 @@
-.putFunc h1 {
+.getFunc h1 {
     background-color: #0a2b2b;
     color: #FFFF;
     font-size: 60px;
@@ -8,30 +8,22 @@
     height: 110px;
 }
 
-.putFunc p {
-    text-align: center;
-    margin-top: 75px;
-    margin-bottom: 40px;
-    font-size: 2rem;
-}
-
-.putFunc form {
+.getFunc form {
     width: 500px;
-    height: 750px;
+    height: 690px;
     margin-left: auto;
     margin-right: auto;
     padding: 20px;
     /* display: grid; */
 }
 
-.putFunc label {
+.getFunc label {
     display: grid;
     font-size: 24px;
     margin-top: 20px;
 }
 
-.putFunc input,
-select {
+.getFunc input {
 
     width: 458px;
     height: 49px;
@@ -39,7 +31,7 @@ select {
     border: none;
 }
 
-.putFunc button {
+.getFunc button {
     background-color: #d9d9d9;
     color: rgb(29, 29, 29);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
