--- a/src/components/GlobalButtons/Global.module.css
+++ b/src/components/GlobalButtons/Global.module.css
@@ -4,7 +4,11 @@
     font-size: 1rem;
     border: none;
     border-radius: .4rem;
-    padding: .3rem 2.5rem;
+    padding: 1rem 3rem;
+}
 
-    margin: .3rem;
+.globalButtons{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
