--- a/src/components/GlobalButtons/Global.module.css
+++ b/src/components/GlobalButtons/Global.module.css
@@ -9,6 +9,8 @@
 
 .globalButtons{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
+    gap: 210px;
+  
 }
