--- a/src/components/Clientes/Get.module.css
+++ b/src/components/Clientes/Get.module.css
@@ -35,7 +35,6 @@
 .getForm button {
     background-color: #d9d9d9;
     color: rgb(29, 29, 29);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     border: none;
     height: 55px;
     width: 170px;
@@ -43,5 +42,10 @@
     position: relative;
     margin-top: 55px;
     margin-left: 30%;
+    transition: .3s
+}
 
+.getForm button:hover {
+    scale: 1.1;
+    box-shadow: 2px 3px 10px rgba(10, 43, 43, .6);
 }
