--- a/src/components/Funcionarios/Get.module.css
+++ b/src/components/Funcionarios/Get.module.css
@@ -34,7 +34,6 @@
 .getFunc button {
     background-color: #d9d9d9;
     color: rgb(29, 29, 29);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     border: none;
     height: 55px;
     width: 170px;
@@ -42,5 +41,10 @@
     position: relative;
     margin-top: 55px;
     margin-left: 30%;
+    transition: .3s;
+}
 
+.getFunc button:hover {
+    scale: 1.1;
+    box-shadow: 2px 3px 10px rgba(10, 43, 43, .6);
 }
