--- a/src/components/GlobalButtons/Global.module.css
+++ b/src/components/GlobalButtons/Global.module.css
@@ -1,16 +1,37 @@
-.globalButtons button{
+.globalButtons button {
     background-color: #d9d9d9;
     color: black;
+    /* text-transform: uppercase; */
     font-size: 1rem;
     border: none;
     border-radius: .4rem;
     padding: 1rem 3rem;
+    transition: .3s;
 }
 
-.globalButtons{
+.globalButtons button:hover {
+    scale: 1.1;
+    box-shadow: 2px 3px 10px rgba(10, 43, 43, .6);
+}
+
+.globalButtons {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 210px;
-  
+    gap: 140px;
+    padding: 0px 0 80px 0;
+}
+
+@media (max-width: 650px) {
+    .globalButtons {
+        display: flex;
+        flex-direction: column;
+        place-items: center;
+    }
+}
+
+@media (max-width: 764px) {
+    .globalButtons {
+        gap: 60px;
+    }
 }
