--- a/src/components/Quartos/Get.module.css
+++ b/src/components/Quartos/Get.module.css
@@ -43,7 +43,6 @@ select {
 .quartoForm button {
     background-color: #d9d9d9;
     color: rgb(29, 29, 29);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     border: none;
     height: 55px;
     width: 170px;
@@ -51,5 +50,10 @@ select {
     position: relative;
     margin-top: 55px;
     margin-left: 30%;
+    transition: .3s;
+}
 
+.quartoForm button:hover {
+    scale: 1.1;
+    box-shadow: 2px 3px 10px rgba(10, 43, 43, .6);
 }
