--- a/src/components/Quartos/Put.module.css
+++ b/src/components/Quartos/Put.module.css
@@ -41,7 +41,6 @@
 .formQuartos button {
     background-color: #d9d9d9;
     color: rgb(29, 29, 29);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     border: none;
     height: 55px;
     width: 170px;
@@ -49,5 +48,10 @@
     position: relative;
     margin-top: 55px;
     margin-left: 30%;
+    transition: .3s;
+}
 
+.formQuartos button:hover {
+    scale: 1.1;
+    box-shadow: 2px 3px 10px rgba(10, 43, 43, .6);
 }
