--- a/src/components/Quartos/QuaItemsCard.css
+++ b/src/components/Quartos/QuaItemsCard.css
@@ -1,13 +1,18 @@
 .ItemsCard {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 60px;
-    padding: 80px;
-  
-  }
-  
-  .ItemsCard .card {
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, .2)
-  }
-  
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 60px;
+  padding: 80px;
+
+}
+
+.ItemsCard .card {
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, .2)
+}
+
+
+.ItemsCard img {
+  height: 240px;
+  object-fit: cover;
+}
