--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -1,3 +1,49 @@
+.loginTeste form{
+    background: rgba(0, 0, 0, 0.59);
+    display: grid;
+    align-items: center;
+    height: 450px;
+    width: 700px;
+    padding: 40px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    margin-left: 25rem;
+
+
+}
+
+.loginTeste h1{
+    text-align: center;
+    color: #ffffff;
+    font-size: 60px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode',
+     'Lucida Grande', 'Lucida Sans', Arial, sans-serif;    
+}
+.loginTeste label{
+    height:2rem;
+    width: 30rem;
+    color: #ffffff;
+    border: none;
+
+}
+.loginTeste input{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 38px;
+    line-height: 46px;
+    border-radius: 8px;
+    opacity: 0.5;
+}
+
+.loginTeste button{
+    align-items: center;
+    margin-top: 2rem;
+    margin-left: 12rem;   
+}
 .loginTeste{
-    background-color: black;
+    padding: 8rem;
+    
+
 }
