--- a/src/components/Login/LoginButton/Button.module.css
+++ b/src/components/Login/LoginButton/Button.module.css
@@ -1,8 +1,36 @@
-.loginbtn button{
-    background-color: #d9d9d9;
+.loginbtn button{ background-color: #d9d9d9;
     color: black;
-    font-size: 1.3rem;
+    /* text-transform: uppercase; */
+    font-size: 1rem;
     border: none;
     border-radius: .4rem;
-    padding: .3rem 2.5rem;
+    padding: 1rem 3rem;
+    transition: .3s;
 }
+
+.loginbtn button:hover {
+    scale: 1.1;
+    box-shadow: 2px 3px 10px rgba(10, 43, 43, .6);
+}
+
+.loginbtn {
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 140px;
+    padding: 0px 0 80px 0;
+}
+
+@media (max-width: 650px) {
+    .globalButtons {
+        display: flex;
+        flex-direction: column;
+        place-items: center;
+    }
+}
+
+@media (max-width: 764px) {
+    .globalButtons {
+        gap: 60px;
+    }
+}
+
