--- a/src/components/Painel/Painel.module.css
+++ b/src/components/Painel/Painel.module.css
@@ -1,18 +1,14 @@
-.painel h1{
+.painel h1 {
     color: #ffffff;
-    
-
     text-align: center;
     font-size: 4rem;
-    
+
 }
-.painel{
-    font-family: 'Roboto', sans-serif;
+
+.painel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: normal;
     text-align: center;
-    
-    
-}
-.painel form{
-    padding-top: 8rem;
 }
