--- a/src/components/Painel/PainelButton/PainelBtn.module.css
+++ b/src/components/Painel/PainelButton/PainelBtn.module.css
@@ -1,10 +1,14 @@
-.painelBtn button{
+.painelBtn button {
     background-color: #d9d9d9;
     color: black;
     font-size: 1rem;
     border: none;
     border-radius: .4rem;
-    padding: .3rem 2.5rem;
-    
+    padding: 10px 30px;
     margin: 3rem;
+    transition: .2s
+}
+
+.painelBtn button:hover {
+    scale: 1.1
 }
